made some visual changes

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -85,4 +85,11 @@
     </div>
 </div>
 
+<script>
+let button = document.querySelector("input");
+input.addEventListener("submit", (event) => {
+    event.preventDefault();
+  })
+</script>
+
 {% endblock content %}
