--- a/templates/booking.html
+++ b/templates/booking.html
@@ -16,7 +16,13 @@
             <h2 class="text-center mt-2 mb-3">Book a class with <span class="brand">Lady<span class="fuxia-lady"><span
                 class="fuxia-thin">|Bike</span></span></span></h2>
             <h5 class="text-center mt-2 mb-3">We offer a maximum capacity of ten people per class and recommend booking one week in advance.</h5>
-            <p class="text-center mb-5">All classes are one hour long. Bring a towel and a water bottle with you.</p>
+            <h5 class="text-center mb-5">All classes are one hour long. Bring a towel and a water bottle with you.
+            <br>Remeber that our classes are booked with numbers:<br>
+            <br><span class="brand">Spinning<span class="fuxia-lady"><span
+                    class="fuxia-thin">|No 1</span></span></span> <br> <span class="brand">Ride that hill<span class="fuxia-lady"><span
+                        class="fuxia-thin">|No 2</span></span></span>
+           <br><span class="brand">LadyBike<span class="fuxia-lady"><span
+                            class="fuxia-thin">|No 3</span></span></span></h5>
         </div>
     </div>
 
@@ -42,7 +48,4 @@
 </div>
 </div>
 
-<script>
-
 {% endblock %}
-
