--- a/templates/classes.html
+++ b/templates/classes.html
@@ -38,6 +38,7 @@
                                 <h6>Start Time: <span style="color: #d606ba;">07:00 AM</span></h6>
                                 <h6>Ends: <span style="color: #d606ba;">08:00 AM</span></h6>
                                 <h6>Calories burnt: <span style="color: #d606ba;">400-500</span></h6>
+                                <h6>Class Number: <span style="color: #d606ba;">One</span></h6>
                                 <p class="card-text">In spin class, you pedal along on a stationary bike as the instructor guides you through a 
                                     visualization of an outdoor workout. The pace and speed will vary throughout the workout, sometimes requiring 
                                     break-neck speed, and other times pedaling happens from a slow, standing position.
@@ -57,6 +58,7 @@
                                 <h6>Start Time: <span style="color: #d606ba;">11:30 AM</span></h6>
                                 <h6>Ends: <span style="color: #d606ba;">12:30 PM</span></h6>
                                 <h6>Calories burnt: <span style="color: #d606ba;">500-600</span></h6>
+                                <h6>Class Number: <span style="color: #d606ba;">Two</span></h6>
                                 <p class="card-text">Ride that hill is an indoor cycling climbing drill where you simulate a hill that creeps 
                                     in grade into a very steep mountain like grade by the end. Whilst cycling up hills seated, you engage your quads, 
                                     glutes and calves more than you would if you were cycling on flat terrain. A great class to increase your strength and power.
@@ -76,6 +78,7 @@
                                 <h6>Start Time: <span style="color: #d606ba;">18:00 PM</span></h6>
                                 <h6>Ends: <span style="color: #d606ba;">19:00 PM</span></h6>
                                 <h6>Calories burnt: <span style="color: #d606ba;">600-700</span></h6>
+                                <h6>Class Number: <span style="color: #d606ba;">Three</span></h6>
                                 <p class="card-text">Is an intense combo class that will push your body to the limit. 
                                     It combines intervals of cardio with strength conditioning, moving quickly between 
                                     the bike and equipment on the ground. Expect to work with dumbbells, bands, gliders, and your own body-weight.</p>
