--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -6,7 +6,8 @@
 <div class="container-fluid">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-8">
-            <h2 class="text-center mt-2 mb-3">Edit your booking</h2>
+            <h2 class="text-center mt-2 mb-3">Edit your booking with <span class="brand">Lady<span class="fuxia-lady"><span
+                class="fuxia-thin">|Bike</span></span></span></h2>
             <p class="mt-2 mb-4">If you make any changes, your booking status will change to 'pending' as we need
                 to ensure that the class is available.</p>
         </div>
