Readme and a small chaneg on Classes page

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -92,4 +92,50 @@
 
   </div>
 
+  <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6 bg-gradient-dark">
+    <!-- Section with four info areas left & one card right with image and waves -->
+    <section class="py-7">
+      <div class="container" style="margin-top:50px">
+          <div class="row gy-5">
+          </div>
+          <div class="d-flex flex-row bd-highlight mb-3 justify-content-center">
+            <div cals="row">
+  
+  
+              <div class="col-md-8 offset-md-2 mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
+              style="text-align:center" data-aos="fade-up">
+                  <div class="icon-box">
+                      <h1 class="title">Do You Have <span><strong style="color: #ffff;">Questions?</strong></span></h1>
+                      <h4>LadyBike's customer support is available on weekdays from 08:00-17:00.<br>
+                        Feel free to reach out at <strong style="color: #fff;">08-123-45</strong> or <a href="info@ladybike.com">
+                      <strong style="color: #ffff;">info@ladybike.com</strong></a></h4>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
+  
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-12 ms-auto mt-lg-0 mt-4">
+              <div class="card">
+                <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+                </div>
+                <div class="card-body text-center">
+                  <h3 class="font-weight-normal" style="color: #d606ba;">
+                    Find Us!
+                  </h3>
+                  <h5 class="mb-0">
+                    LadyBike is based in central Stockholm at Regeringsgatan 1, 111 53 Stockholm.<br>
+                    We are looking forward to sweating with you!
+                  </h5><br>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.1831986220532!2d18.0685133!3d59.3298952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d5ed1117e2f%3A0x129118f2d430e145!2sRegeringsgatan%201%2C%20111%2053%20Stockholm!5e0!3m2!1sen!2sse!4v1660053666273!5m2!1sen!2sse" 
+                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
 {%endblock%}
