--- a/templates/delete_booking.html
+++ b/templates/delete_booking.html
@@ -24,7 +24,8 @@
 
                 <!-- Button to open modal -->
                 <button type="button" data-toggle="modal" data-target="#confirmationModal" href="#confirmationModal"
-                    class="button mt-4 text-center cancel-button" id="delete-booking">Cancel Your
+                    class="button mt-4 text-center cancel-button" id="delete-booking" style="background-color: #d606ba;
+                    color: white;">Cancel Your
                     Booking</button>
 
                 <!-- Modal https://getbootstrap.com/docs/4.0/components/modal/ -->
@@ -45,7 +46,8 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary close" data-dismiss="modal">I changed
                                     my mind...I want to sweat!</button>
-                                <button type="submit" class="btn btn-danger">Cancel it.</button>
+                                <button type="submit" class="btn btn-danger" style="background-color: #d606ba;
+                                color: white;">Cancel it.</button>
                             </div>
                         </div>
                     </div>
