--- a/templates/classes.html
+++ b/templates/classes.html
@@ -90,7 +90,7 @@
             </div>
 
 
-  </div>
+  
 
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6 bg-gradient-dark">
     <!-- Section with four info areas left & one card right with image and waves -->
@@ -99,7 +99,7 @@
           <div class="row gy-5">
           </div>
           <div class="d-flex flex-row bd-highlight mb-3 justify-content-center">
-            <div cals="row">
+            <div>
   
   
               <div class="col-md-8 offset-md-2 mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
