Readme half way through

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <h1 class="text-white">Welcome to <span><strong style="color: #d606ba;">Ladybike</strong></span></h1>
           <p class="lead mb-4 text-white opacity-8 display-6">We’re passionate female cycling professionals who want to make cycling training a fun experience for other females!</p>
           <h4 class="text-white mb-3">Book a session today, and we'll ensure you have a great sweaty experience!</h4>
-          <button type="submit" class="btn-lg bg-white font-weight-bold" style="color: #d606ba; font-weight: 800;"><a href="{% url 'booking' %}" style="color: #d606ba;">Book Now!</a></button>
+          <a href="{% url 'booking' %}" style="color: #d606ba;"><button>Book Now!</button></a>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
                   <div class="icon-box">
                       <div class="icon mb-3"><img src="{% static 'images/Strong_girl.png' %}" alt="Strong_girl">
                       </div>
-                      <h1 class="title">Become <span><strong style="color: #d606ba;">Stronger</strong></span></h1>
+                      <h2>Become <span><strong style="color: #d606ba;">Stronger</strong></span></h2>
                       <h4>LadyBike encourages you to get a better cyclist week by week! You progress gradually, increasing the
                         intensity in each workout.</h4>
                   </div>
@@ -54,7 +54,7 @@
                   <div class="icon-box">
                       <div class="icon mb-3"><img src="{% static 'images/Community.png' %}" alt="Community">
                       </div>
-                      <h1 class="title">Join Our <span><strong style="color: #d606ba;">Community</strong></span></h1>
+                      <h2>Join Our <span><strong style="color: #d606ba;">Community</strong></span></h2>
                       <h4>LadyBike has a great community of women interested in Cycling. Connect with like-minded people and 
                         share your experiences and aspirations!</h4>
                   </div>
@@ -66,7 +66,7 @@
                   <div class="icon-box">
                       <div class="icon mb-3"><img src="{% static 'images/Cyclist.png' %}"  alt="Cyclist">
                       </div>
-                      <h1 class="title">Only For <span><strong style="color: #d606ba;">Women</strong></span></h1>
+                      <h2>Only For <span><strong style="color: #d606ba;">Women</strong></span></h2>
                       <h4>LadyBike offers three cycling indoor workouts ONLY for women! LadyBike is a place for women who are focused on their health and fitness and 
                         want to become better cyclists.</h4>
                   </div>
@@ -89,8 +89,7 @@
                     Our articles provide great content to inspire you to follow a healthy lifestyle.
                   </h5>
                   <a class="btn bg-gradient-info btn-sm mb-0 mt-3" style="background-color: #d606ba;" href="{% url 'articles' %}">
-                    <button type="button" class="font-weight-bold" style="font-weight: 800;">Find out more</button>
-                  </a>
+                    <button type="button" class="font-weight-bold" style="font-weight: 800;">Find out more</button></a>
                 </div>
               </div>
             </div>
