Small changes on the map section on classes

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <h1 class="text-white">Welcome to <span><strong style="color: #d606ba;">Ladybike</strong></span></h1>
           <p class="lead mb-4 text-white opacity-8 display-6">We’re passionate female cycling professionals who want to make cycling training a fun experience for other females!</p>
           <h4 class="text-white mb-3">Book a session today, and we'll ensure you have a great sweaty experience!</h4>
-          <a href="{% url 'booking' %}" style="color: #d606ba;"><button>Book Now!</button></a>
+          <a href="{% url 'booking' %}" style="color: #d606ba;"><button type="submit" class="btn-lg bg-white font-weight-bold" style="color: #d606ba; font-weight: 800;">Book Now!</button></a>
         </div>
       </div>
     </div>
