--- a/templates/500.html
+++ b/templates/500.html
@@ -10,10 +10,10 @@
           <div class="card z-index-0 fadeIn3 fadeInBottom">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
+                <h4 class="text-black font-weight-bolder text-center mt-2 mb-0">
                     Error 500
                 </h4>
-                <div class="text-center text-white">
+                <div class="text-center text-black">
                   Server Error
                 </div>
               </div>
