Fixed 403, 404, 500 error pages

--- a/templates/500.html
+++ b/templates/500.html
@@ -9,11 +9,11 @@
         <div class="col-lg-4 col-md-8 col-12 mx-auto">
           <div class="card z-index-0 fadeIn3 fadeInBottom">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                <h4 class="text-black font-weight-bolder text-center mt-2 mb-0">
+              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1" style="background-color: #d606ba;">
+                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                     Error 500
                 </h4>
-                <div class="text-center text-black">
+                <div class="text-center text-white">
                   Server Error
                 </div>
               </div>
