Added the links to the footer, ensuring they open on a new tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -117,8 +117,10 @@
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Made by Vanessa Andersson</p>
         <p class="m-0 text-center text-white">Follow me:
-            <i class="fab fa-github"><a href="https://github.com/van-essa" target="_blank" title="Vanessa"></a></i>
-            <i class="fab fa-linkedin-in"><a href="https://www.linkedin.com/in/vanessaannamariaandersson/" target="_blank" title="My_LinkedIn"></a></i>
+            <a href="https://github.com/van-essa" target="_blank" title="Vanessa">
+                <i class="fab fa-github white-text"> </i></a>
+            <a href="https://www.linkedin.com/in/vanessaannamariaandersson/" target="_blank" title="My_LinkedIn">
+                <i class="fab fa-linkedin-in white-text"> </i></a>
     </footer>
 
     <!-- Timer showing the allert messages -->
