--- a/templates/classes.html
+++ b/templates/classes.html
@@ -25,7 +25,9 @@
     </div>
   </header>
 
+  <section class="pb-4">
   <div class="container justify-content-center">
+  <section class= "p-4 text-center w-100">
 
                 <!-- Content Card-->
                 <div class="card-group gx-4 gx-lg-5">
@@ -105,7 +107,9 @@
                         </div>
                     </div>
                 </div>
+              </section>
             </div>
+          </section>
 
 
   
